04-k8s-ingress/manifests/orders-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orders-service
spec:
  selector:
    app: orders
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
