04-k8s-ingress/manifests/payments-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payments-service
spec:
  selector:
    app: payments
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
